fix(mobile): add screen-small breakpoint to upload--images__grid--is-free
Fixed 4-column fixed-px grid overflowing on mobile. Free plan now shows
2 columns on screens ≤530px.

--- a/apps/website/app/scss/components/_upload.scss
+++ b/apps/website/app/scss/components/_upload.scss
@@ -35,6 +35,10 @@
       &--is-free {
         grid-template-columns: 108.33px 108.33px 108.33px 108.33px;
         justify-content: center;
+
+        @include screen-small {
+          grid-template-columns: 1fr 1fr;
+        }
       }
     }
 
